# SDB

./: CMakeLists.txt  README.md
include/: utils.hpp
include/sdb/: config.hpp  debugger.hpp  error.hpp  logger.hpp  result.hpp  trace.hpp  types.hpp
src/: config.cpp  debugger.cpp  main.cpp  trace.cpp  utils.cpp
tests/: test_config.cpp  test_debugger.cpp  test_error.cpp  test_handshake.cpp  test_launch.cpp  test_logger.cpp  test_main.cpp
